feat(security): enable RBAC with Asgardeo for Admin and Worker roles
- Configured Spring Security to map JWT claims (`groups` and `roles`) into ROLE_* authorities
- Added scope-based access rules for:
  • `hello.read` → Worker role → `/hello`
  • `hello.admin` → Admin role → `/helloRestrict`
- Updated Asgardeo setup:
  • Created API resource `Spring Boot API Demo` with scopes
  • Created application roles (admin, worker) and assigned users
  • Linked roles to scopes with RBAC
- Verified successful integration from Angular client → Spring backend using access tokens